chenge bootsrap scss

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,8 +1,15 @@
 @charset "UTF-8";
+@import "bootstrap";
 
+body {
+        padding-top: 100px;
+        }
 h2 {
-   color: red;
+   color: $primary;
    &:hover{
     color: blue;
           }
   }
+        .topics p {
+        text-align: justify;
+        }
